[package]
name = "manul_cat_rs"
version = "0.4.0"
edition = "2024"

[dependencies]
moleucle_3dview_rs = { git = "https://github.com/IndigoCarmine/moleucle_3dview_rs.git", version = "0.6.0" }

eframe = "0.34.2"
egui = "0.34.2"
egui-wgpu = "0.34.2"
rfd = "0.17.2"
anyhow = "1.0"
lin_alg = "1.3.14"
material-icons = "0.3.0"
image = "0.25"


[build-dependencies]
winresource = "0.1"
